# event-capture

./: .gitignore  README.md  Untitled.ipynb  background1.js  details.html  details.js  event-config.json  eventrecorder.js  form.html  form.js  manifest.json  popup copy.js  popup.js  recorder.js  server.js
backend/: .replit  package.json  server.js
extension/: EVENTS.md  background.js  browsergym-inject.js  config.js  details.html  details.js  event-config.json  manifest.json  offscreen.html  offscreen.js  popup.css  popup.html  popup.js  recorder.js
resources/: server.js
server/: .env.example  pyproject.toml  requirements.txt  server.py
